--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -1,5 +1,5 @@
 leftnav:
 - identifier: c3467224-c1d6-43fe-8e3b-dccdd6dae60c
-  name: MICRO Initiative
+  name: About MICRO
   url: /pages/micro-initiative
   weight: 10
