Sync all content

--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,7 +4,7 @@ leftnav:
   url: /pages/micro-initiative
   weight: 10
 - identifier: 7d80c17f-1460-439d-a1ce-ed9e670f50aa
-  name: Mentoring Syllabus and Curriculum
+  name: Mentoring Resources
   url: /pages/introduction-to-mentoring-an-undergraduate-student
   weight: 20
 - identifier: b86f62d8-591c-4792-bf6a-b241dcfeb111
